--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -2,15 +2,19 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>people</title>
+    <title>Index</title>
 </head>
 <body>
 
 <div th:each="person : ${people}">
-  <a th:href="@{people/{id}(id=${person.getId()})"
-      th:text="${person.getName() + }"></a>
+    <a th:href="@{/people/{id}(id=${person.getId()})}"
+       th:text="${person.getFullName() + ', ' + person.getYearOfBirth()}">user</a>
 </div>
 
+<br/>
+<hr/>
+
+<a href="/people/new">Добавить человека</a>
 
 </body>
 </html>
